# workflow-use

./: ADVANCED_DEPLOYMENT.md  BROWSER_USE_WEBUI_INTEGRATION.md  CHAT_INTERFACE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_UPDATED.md  FUNCTION_SEQUENCES.md  POWERSHELL_BROWSER_USE_GUIDE.md  POWERSHELL_LAUNCHER.md  README.md  UV_DEPLOYMENT_GUIDE.md  deploy-advanced.bat  deploy-dev.bat  deploy-python.bat  deploy-simple.bat  deploy.bat  deploy.py  docker-compose.yml  launch-browser-use-complete.ps1  launch-browser-use-fixed.ps1  launch-browser-use-suite.bat  launch-browser-use-webui.ps1  launch-browser-use-webui.sh  launch-integrated-suite.py  launch-simple.ps1  launch-workflow-suite.ps1  main.py  nginx.conf  pyproject.toml  test-all.bat  validate.py
ui/: Dockerfile  package-lock.json  package.json
ui/src/components/: chat-interface.tsx  workflow-layout.tsx
workflow_use/: __init__.py
workflow_use/core/: config.py  exceptions.py  logger.py
workflow_use/models/: __init__.py  workflow.py
workflows/: .env.example  Dockerfile  pyproject.toml
workflows/backend/: api.py  chat_routers.py  chat_service.py  chat_views.py
