[project]
name = "workflow-use-suite"
version = "0.1.0"
description = "Complete workflow-use suite with browser automation and web interface"
authors = [
    {name = "Workflow-Use Team", email = "team@workflow-use.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core workflow dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    
    # Browser automation
    "playwright>=1.40.0",
    "selenium>=4.15.0",
    
    # Web UI dependencies
    "gradio>=4.0.0",
    "streamlit>=1.28.0",
    
    # HTTP and networking
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    
    # Environment and configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    
    # Logging and monitoring
    "loguru>=0.7.0",
    "rich>=13.7.0",
    
    # Development utilities
    "click>=8.1.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
