[project]
name = "workflow-use-suite"
version = "1.0.0"
description = "Simple workflow automation suite with browser-use integration"
authors = [
    {name = "Workflow-Use Team", email = "team@workflow-use.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    
    # Browser automation
    "playwright>=1.40.0",
    "selenium>=4.15.0",
    
    # Web UI
    "gradio>=4.0.0",
    
    # HTTP and networking
    "requests>=2.31.0",
    "httpx>=0.25.0",
    
    # Environment and configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    
    # Console and utilities
    "rich>=13.7.0",
    "click>=8.1.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

